--- a/about.html
+++ b/about.html
@@ -1,10 +1,27 @@
-<html>
+<!DOCTYPE html>
 
-<h1>woop woop!</h1>
+<head>
 
-<a href="index.html">go to index</a>
+    <title>Website name</title>
+
+</head>
+
+    <h1>About this website</h1>
+    <hr>
+  
+
+
+<body>
+
+    <p>This is a learning project to learn the web development basics</p>
+    
+
+    <a href="index.html">Back to start</a>
+        
+
+</body>
+
 
 
 </html>
-
 
