Add header and footer

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 
 </head>
 
-    <h1>Website name</h1>
-    <hr>
   
 
-
 <body>
+
+    <header>
+
+        <h1>Website name</h1>
+
+    </header>
 
     <p>On this website you can manage your private to do list</p>
     
@@ -36,6 +39,13 @@
 
     <a href="register.html">Create New Account</a>
         
+    <footer>
+
+        <p>Footer text</p>
+
+    </footer>
+
+
 
 </body>
 
