Update website layout

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
   
 <body>
 
-    <header>
+    <header class="header">
         <h1>Website name</h1>
+
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+          </div>
     </header>
 
     <p>Private to do list website</p>
     
 
-    <form>
+    <form id="login-form">
         <h2>Login</h2>
         <label for="username">Email:</label>
         <input type="text" id="username" name="username" required>
