Update design and structure

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,10 @@
             <a href="contact.html">Contact</a>
           </div>
     </header>
+    
 
-    <p>About text</p>
+    <p>Contact information</p>
+
 
         
     <footer>
