--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
         <h1>Website name</h1>
 
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a class="active" href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
           </div>
     </header>
-
-    <p>Private to do list website</p>
     
 
     <form id="login-form">
