Remove register.html

--- a/index.html
+++ b/index.html
@@ -1,53 +1,41 @@
 <!DOCTYPE html>
 
 <head>
-
     <link rel="stylesheet" href="styles.css" />
-
-    <title>Website name</title>
-
+    <title>Task master</title>
 </head>
 
-  
-<body>
+    <body>
 
-    <header class="header">
-        <h1>Website name</h1>
+        <header class="header">
+            <h1>Website name</h1>
 
-        <div class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-          </div>
-    </header>
-    
-
-    <form id="login-form">
-        <h2>Login</h2>
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Login">
-
-        <hr>
-
-        <a id="register-link" href="register.html">Create new account</a>
-    </form>
-
-
+            <div class="topnav">
+                <a class="active" href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </header>
         
-    <footer>
 
-        <p>Footer text</p>
+        <form id="login-form">
+            <h2>Login</h2>
+            <label for="username">Email:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <input type="submit" value="Login">
 
-    </footer>
+            <hr>
 
+            <a id="register-link" href="#register">Create new account</a>
+        </form>
 
+        <footer>
+            <p>Made with &hearts; in Berlin</p>
+        </footer>
 
-</body>
-
-
+    </body>
 
 </html>
 
