--- a/about.html
+++ b/about.html
@@ -1,40 +1,29 @@
 <!DOCTYPE html>
 
 <head>
-
     <link rel="stylesheet" href="styles.css" />
-
-    <title>Website name</title>
-
+    <title>Task master</title>
 </head>
 
-  
-<body>
+    <body>
 
-    <header class="header">
-        <h1>Website name</h1>
+        <header class="header">
+            <h1>Website name</h1>
 
-        <div class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-          </div>
-    </header>
+            <div class="topnav">
+                <a class="active" href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </header>
 
-    <p>About text</p>
+        <p>About text</p>
 
-        
-    <footer>
+        <footer>
+            <p>Made with &hearts; in Berlin</p>
+        </footer>
 
-        <p>Footer text</p>
-
-    </footer>
-
-
-
-</body>
-
-
+    </body>
 
 </html>
 
