--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <body>
 
         <header class="header">
-            <h1>Website name</h1>
+            <h1>Task master</h1>
 
             <div class="topnav">
                 <a class="active" href="index.html">Home</a>
