--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="styles.css" />
-    <title>Website name</title>
+    <title>Task master</title>
 
 </head>
 
