Update about and contact text

--- a/about.html
+++ b/about.html
@@ -17,7 +17,17 @@
             </div>
         </header>
 
-        <p>About text</p>
+        <div class="about-text">
+
+            <p>This page is a personal project that I use as part of my studies to learn and delve into the fundamentals of web technologies. My goal is to develop a solid understanding of various aspects of web design and development, from HTML and CSS to JavaScript and other advanced techniques.</p>
+
+            <p>Through the practical application of these technologies on this website, I aim not only to expand my knowledge but also to improve my skills to successfully execute future projects. I firmly believe that the internet provides a boundless platform for creativity, innovation, and learning, and I am determined to contribute to it.</p>
+        
+            <p>This site will be continuously evolving and improving as I expand my expertise and acquire new skills. I invite you to explore and learn more about the various technologies and concepts I am exploring here. If you have any questions or just want to say hello, feel free to <a href="contact.html">contact me</a>.</p>
+        
+            <p>Thank you for visiting and showing interest in my learning project!</p>
+
+        </div>
 
         <footer>
             <p>Made with &hearts; in Berlin</p>
