Add breakpoint and media query

--- a/index.html
+++ b/index.html
@@ -18,18 +18,24 @@
         </header>
         
 
-        <form id="login-form">
-            <h2>Login</h2>
-            <label for="username">Email:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <input type="submit" value="Login">
+        <main>
 
-            <hr>
+            <form id="login-form">
+                <h2>Login</h2>
+                <label for="username">Email:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <input type="submit" value="Login">
 
-            <a id="register-link" href="#register">Create new account</a>
-        </form>
+                <hr>
+
+                <a id="register-link" href="#register">Create new account</a>
+            </form>
+
+        </main>
+
+
 
         <footer>
             <p>Made with &hearts; in Berlin</p>
