--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
         <header class="header">
             <h1>Task master</h1>
 
-            <div class="topnav">
-                <a class="active" href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </div>
+            <nav class="topnav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         
 
