Add image and responsive design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         
 
-        <main>
+        <main class="container">
 
             <form id="login-form">
                 <h2>Login</h2>
@@ -36,6 +36,10 @@
 
                 <a id="register-link" href="#register">Create new account</a>
             </form>
+
+            <div class="image">
+                <img src="todo_list.jpg" alt="Image" class="rounded-image">
+            </div>
 
         </main>
 
