--- a/index.html
+++ b/index.html
@@ -20,33 +20,32 @@
                 </ul>
             </nav>
         </header>
-        
-
+    
         <main class="container">
 
             <form id="login-form">
                 <h2>Login</h2>
-                <label for="username">Email:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <div>
+                    <label for="username">Email:</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
                 <input type="submit" value="Login">
-
                 <hr>
-
                 <a id="register-link" href="#register">Create new account</a>
             </form>
 
-            <div class="image">
-                <img src="todo_list.jpg" alt="Image" class="rounded-image">
-            </div>
+            <img class="image" src="todo_list.jpg" alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen" class="rounded-image">
 
         </main>
 
 
 
         <footer>
-            <p>Made with &hearts; in Berlin</p>
+            <p>Made with love in Berlin</p>
         </footer>
 
     </body>
