--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,24 +21,17 @@
             </ul>
         </nav>
     </header>
-    <main class="container">
-        <form id="login-form">
-            <h2>Login</h2>
-            <div>
-                <label for="username">Email:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <input type="submit" value="Login">
-            <hr>
-            <a id="register-link" href="#register">Create new account</a>
-        </form>
-        <img class="image" src="todo_list.jpg"
-            alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen"
-            class="rounded-image">
+    <main>
+        <p>Have a question or just want to say hello? Feel free to get in touch with me!</p>
+        <p>You can reach me via email or on Github.</p>
+        <ul>
+            <li>
+                <a href="mailto:noah.frank@code.berlin">Write me an email</a>
+            </li>
+            <li>
+                <a href="https://github.com/noah-frank/" target="_blank">Visit my Github</a>
+            </li>
+        </ul>
     </main>
     <footer>
         <p>Made with love in Berlin</p>
