--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="/static/styles/main.css" />
+    <link rel="stylesheet" href="static/styles/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="static/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicons/favicon-32x32.png">
@@ -36,7 +36,7 @@
             <hr>
             <a id="register-link" href="#register">Create new account</a>
         </form>
-        <img class="image" src="todo_list.jpg"
+        <img class="image" src="/static/images/todo_list.jpg"
             alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen"
             class="rounded-image">
     </main>
