--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <hr>
             <a id="register-link" href="#register">Create new account</a>
         </form>
-        <img class="image" src="/static/images/todo_list.jpg"
+        <img class="image" src="static/images/todo_list.jpg"
             alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen"
             class="rounded-image">
     </main>
