--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,8 @@
             <hr>
             <a id="register-link" href="#register">Create new account</a>
         </form>
-        <img class="image" src="images/todo_list.jpg"
-            alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen"
-            class="rounded-image">
+        <img class="image" src="images/todo_list.jpg" class="rounded-image"
+            alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen.">
     </main>
     <footer>
         <p>Made with love in Berlin</p>
