--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles/main.css" />
+    <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Task master: Streamline your daily tasks with ease. Login to manage your to-do list, access important resources, and more. Join us now and boost your productivity!">
+    <meta name="keywords" content="task management, productivity, to-do list, login, user account, Task master">
+    <meta name="author" content="Noah Frank">
+    <link rel="stylesheet" href="styles/main.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
